tests/f-stack/error/f-stack-error1.pkt
// DO NOT delete or add line in this file

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0
+0 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0
+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0 < S 0:0(0) win 12336 <TS val 100 ecr 0,eol,mss 14705,eol>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792 <mss 1000,sackOK,TS val 100 ecr 100,nop,wscale 7>

// RST is sent in f-stack
// +.1 > R 1:1(0)

+0.2 accept(3, ..., ...) = 4

+0.1 write(4, ..., 100) = 100
+.1 > P. 1:101(100) ack 1 <...>

// This is a Linux bug!